--- a/src/Component/LoginComponent/LoginPage.scss
+++ b/src/Component/LoginComponent/LoginPage.scss
@@ -21,7 +21,7 @@
     border-radius: 20%;
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    height:400px;
+    height:600px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,8 +41,8 @@
     width: 100%;
 }
 
-.btn--container button{
-    margin-top: 40px;
+.btn--container{
+    margin-top: 10px;
     background-color:#5237cc ;
     outline: none;
     border: 1px solid #5237cc ;
@@ -75,9 +75,47 @@
         border-radius: 20%;
         border-top-left-radius: 20px;
         border-bottom-right-radius: 20px;
-        height:400px;
+        height:600px;
         width: 500px;
         background-color: #fff;
     }
     
+}
+@media (max-width:768px){
+    .login--container{
+        width:100%;
+        &-active{
+            background-color: #e4e8ed;
+            height:300px;
+        }
+        &-inactive{
+            background-color: #5237cc;
+            height:650px;
+        }
+        &-active img{
+            width: 100%;
+            height:200px;
+            opacity: 1;
+        }
+    }
+    .container{
+        padding:0px !important
+    }
+    .heading{
+        color:#5237cc;
+        font-size: 1.3rem;
+    }
+}
+
+.login--text span{
+    font-size: 12px;
+    font-weight: 500;
+    color:#5237cc;
+    cursor:pointer;
+    text-decoration: underline;
+}
+
+.error-text{
+    color:#5237cc;
+    font-size: 14px;
 }
